--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
         volumes:
           - ${MYSQL_DATA}:/var/lib/mysql
     redis:
+        container_name: laravel-redis
         image: 'redis:alpine'
         ports:
             - '${FORWARD_REDIS_PORT:-6379}:6379'
